# tpm-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE.md  MAINTAINERS.md  README.md  ci.sh  rust-toolchain.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  cla.yml  docs.yml
base/: Cargo.toml
base/src/: big_endian.rs  commands.rs  constants.rs  crypto.rs  error_codes.rs  errors.rs  hash.rs  lib.rs  marshal.rs  policy.rs  server.rs  storage.rs  structures.rs  tests.rs  types.rs
base/src/commands/: asymmetric.rs  attached_components.rs  attestation.rs  capability.rs  clock_timer.rs  command_audit.rs  context.rs  dictionary_attack.rs  duplication.rs  enhanced_auth.rs  ephemeral.rs  field_upgrade.rs  get_capability.rs  hash_hmac_event.rs  hierarchy.rs  miscellaneous.rs  mod.rs  nv_storage.rs  object.rs  pcr.rs  pcr_read.rs  prelude.rs  random.rs  session.rs  signature.rs  startup.rs  symmetric.rs  testing.rs  vendor.rs
base/src/types/: tpm.rs  tpm2b.rs  tpma.rs  tpmi.rs  tpml.rs  tpms.rs  tpmt.rs  tpmu.rs
base/src/types/tpm/: hc.rs  rc.rs
base/src/types/tpm2b/: private.rs
base/src/types/tpma/: cc.rs  locality.rs  nv.rs
base/src/types/tpmi/: rh_nv_index.rs  sh_auth_session.rs
base/src/types/tpms/: attest.rs
base/src/types/tpmt/: ha.rs  public.rs  sensitive.rs
client/: Cargo.toml  Dockerfile  compose.yaml
client-features/: Cargo.toml
client-features/src/: lib.rs  tests.rs
client/feature/: Cargo.toml
client/feature/src/: lib.rs
client/src/: lib.rs  sessions.rs  tests.rs
client/src/connection/: mod.rs  tcp.rs
client/src/sessions/: authorization_area.rs  mod.rs  nosession.rs  notsession.rs  password.rs  session.rs  tests.rs
client/src/sessions/authorization_area/: mod.rs  s0.rs  s1.rs  s2.rs  s3.rs
client/tests/: integration_test.rs  integration_tests.rs  simulator.rs  simulator_tests.rs
client/tests/commands/: capability.rs  mod.rs  random.rs
client/tests/common/: mod.rs
client/tests/simulator_tests/: mod.rs
client/tests/simulator_tests_registration/: capability.rs  mod.rs  nv_storage.rs  random.rs
crates/tpm2/: Cargo.toml
crates/tpm2-client/: Cargo.toml  Dockerfile  compose.yaml
crates/tpm2-client/src/: lib.rs  tests.rs
crates/tpm2-client/src/connection/: mod.rs  tcp.rs
crates/tpm2-client/src/protocol/: mod.rs
crates/tpm2-client/src/sessions/: nosession.rs  password.rs  session.rs  tests.rs
crates/tpm2-client/src/sessions/authorization_area/: s3.rs
crates/tpm2-client/tests/: simulator.rs
crates/tpm2-client/tests/commands/: capability.rs  random.rs
crates/tpm2-impl/: Cargo.toml
crates/tpm2-impl/src/: crypto.rs  error.rs  lib.rs  req_resp.rs  tpmctx.rs
crates/tpm2-impl/src/buffers/: inout.rs
crates/tpm2-impl/src/platform/: buffer.rs
crates/tpm2-impl/src/platform/crypto/: entropy.rs
crates/tpm2-impl/src/platform/crypto/drbg/: error.rs
crates/tpm2-impl/src/tests/: mod.rs
crates/tpm2/src/: constants.rs  lib.rs  marshal.rs  tpm2b.rs  tpmi.rs  tpmt.rs
crates/tpm2/src/commands/: mod.rs
crates/tpm2/src/commands/responses/: mod.rs
crates/tpm2/src/errors/: mod.rs  std.rs  tss_rc.rs
crates/tpm2/src/errors/tpm_rc/: mod.rs
crates/tpm2/src/impls/: alg.rs  commands.rs  enums.rs  mod.rs  newtypes.rs
docs/: coding-style.md
docs/meeting-notes/: 2023-10-23.md  2024-10-15.md
docs/specs/tpm2_v185/: README.md
drbg/: Cargo.toml
drbg/src/: hashdrbg.rs  helpers.rs  lib.rs  props.rs  rustcrypto.rs
drbg/src/hashdrbg/: mod.rs
drbg/src/hashdrbg/test/: nist_tests.rs  unit_tests.rs
drbg/src/test/: mod.rs  nist_parser.rs  nist_tests.rs
drbg/vectors/: Readme.md  get_vectors.sh
drbg/vectors/no_reseed/: Hash_DRBG.txt
errors/: Cargo.toml
errors/src/: lib.rs  std.rs  tpm_rc.rs  tss_rc.rs
errors/src/tpm_rc/: mod.rs  tests.rs
examples/: code_size.rs
go_tests/: go.mod  go.work  go.work.sum
go_tests/simulator/: go.mod
go_tests/simulator/simulator/: simulator.go
marshal/: Cargo.toml
marshal-derive/: Cargo.toml
marshal-derive/src/: lib.rs
marshal/derive/: Cargo.toml
marshal/derive/src/: lib.rs
marshal/src/: lib.rs  tests.rs
marshal_derive/: Cargo.toml
marshal_derive/src/: lib.rs
marshalable/: Cargo.toml
marshalable-derive/: Cargo.toml
marshalable-derive/src/: lib.rs
marshalable/src/: errors.rs  lib.rs  tests.rs
rwtpm/: Cargo.toml  README.md
rwtpm/src/: args.rs  helpers.rs  logging.rs  main.rs
rwtpm/src/platform/: entropy.rs  mod.rs
rwtpm/src/stream/: mod.rs  socket.rs
server/: Cargo.toml
server/src/: buffer.rs  crypto.rs  error.rs  handler.rs  lib.rs  req_resp.rs  service.rs  tests.rs  tpmctx.rs
server/src/buffers/: inout.rs  mod.rs  separate.rs
server/src/handler/: mod.rs  random.rs
server/src/platform/: crypto.rs  mod.rs
server/src/platform/crypto/: drbg.rs  mod.rs
server/src/platform/crypto/drbg/: error.rs  helpers.rs  mod.rs
server/src/platform/drbg/: helpers.rs  mod.rs
server/src/tests/: crypto.rs  drbg.rs  entropy.rs  mod.rs
service/: Cargo.toml
service/src/: buffer.rs  crypto.rs  error.rs  lib.rs  service.rs
service/src/handler/: mod.rs
service/src/tests/: mod.rs
src/: base.rs  constants.rs  errors.rs  handles.rs  hash.rs  lib.rs  main.rs  marshal.rs  public.rs  tpm2b.rs  tpma.rs  tpmi.rs  tpms.rs  tpmt.rs
src/commands/: mod.rs  responses.rs
src/marshal/: limits.rs  mod.rs
testing/drbg/vectors/pr_false/: Hash_DRBG.txt
testing/drbg/vectors/pr_true/: Hash_DRBG.txt
unionify/: Cargo.toml
unionify-derive/: Cargo.toml
unionify-derive/src/: lib.rs
unionify/src/: lib.rs
unionify/tests/fail/: const_generics.rs  const_generics.stderr  error_aggregation.rs  error_aggregation.stderr  generics.rs  generics.stderr  multi_named_variants.rs  multi_named_variants.stderr  multi_unnamed_variants.rs  multi_unnamed_variants.stderr  zero_sized_union.rs  zero_sized_union.stderr
unionify/tests/pass/: empty_variant.rs  mixed_variants.rs  named_variants.rs  partially_tagged_variants.rs  unnamed_variants.rs
unionify/unionify-derive/: Cargo.toml
unionify/unionify-derive/src/: lib.rs
