[workspace]
resolver = "3"
members = [
    "base",
    "client",
    "errors",
    "marshalable",
    "marshalable-derive",
    "server",
    "unionify",
    "unionify-derive",
]
# TODO: Shorten this default
default-members = [
    ".",
    "base",
    "client",
    "errors",
    "marshalable",
    "marshalable-derive",
    "server",
    "unionify",
    "unionify-derive"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Trusted Computing Group", "TPM-RS Project Developers"]
license = "Apache-2.0"
documentation = "https://docs.rs/tpm2"
homepage = "https://github.com/tpm-rs"
repository = "https://github.com/tpm-rs/tpm-rs"
keywords = ["tpm", "tss", "tpm2"]
categories = ["cryptography", "no-std"]

[workspace.dependencies]
# Third party dependencies
bitflags = "2.4.2"
hex-literal = { version = "0.4.1" }
open-enum = "0.4.1"
proc-macro2 = "1"
quote = "1"
safe-discriminant = "0.2.0"
syn = { version = "2", features = ["full"] }
trybuild = { version = "1.0.89", features = ["diff"] }
zerocopy = { version = "0.8.33", features = ["derive"] }

# Common workspace crates
tpm2-rs-base = { path = "base" }
tpm2-rs-client = { path = "client" }
tpm2-rs-errors = { path = "errors" }
tpm2-rs-marshalable = { path = "marshalable" }
tpm2-rs-marshalable-derive = { path = "marshalable-derive" }
tpm2-rs-server = { path = "server" }
tpm2-rs-unionify = { path = "unionify" }
tpm2-rs-unionify-derive = { path = "unionify-derive" }

[package]
name = "tpm2"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[profile.release]
lto = true        # default is lto = false
codegen-units = 1 # default is codegen-units = 16
strip = true      # default is strip = "none"
