[workspace]
resolver = "3"

# TODO (https://github.com/tpm-rs/tpm-rs/issues/215): Reduce number of crates
members = [
    "base",
    "client",
    "errors",
    "marshalable",
    "marshalable-derive",
    "server",
    "unionify",
    "unionify-derive",
]

# Package keys that should be used by all packages.
# We don't set: authors (deprecated), license-file, exclude, include, or publish
# Defaults are fine for: documentation (crates.io) and readme (README.md)
# Packages should set their own: name and description
[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
homepage = "https://github.com/tpm-rs"
repository = "https://github.com/tpm-rs/tpm-rs"
license = "Apache-2.0"
keywords = ["tpm", "tss", "tpm2"]
categories = ["cryptography", "no-std"]

[workspace.dependencies]
# Third party dependencies
bitflags = "2.4.2"
hex-literal = { version = "0.4.1" }
open-enum = "0.4.1"
proc-macro2 = "1"
quote = "1"
safe-discriminant = "0.2.0"
syn = { version = "2", features = ["full"] }
tempfile = "3.25.0"
trybuild = { version = "1.0.89", features = ["diff"] }
zerocopy = { version = "0.8.33", features = ["derive"] }

# Common workspace crates
tpm2-rs-base = { path = "base" }
tpm2-rs-client = { path = "client" }
tpm2-rs-errors = { path = "errors" }
tpm2-rs-marshalable = { path = "marshalable" }
tpm2-rs-marshalable-derive = { path = "marshalable-derive" }
tpm2-rs-server = { path = "server" }
tpm2-rs-unionify = { path = "unionify" }
tpm2-rs-unionify-derive = { path = "unionify-derive" }

[profile.release]
lto = true # default is lto = false
codegen-units = 1 # default is codegen-units = 16
strip = true # default is strip = "none"
