[package]
name = "tpm2-rs-base"
version = "0.0.1"
edition = "2021"

[dependencies]
bitflags = { workspace = true }
open-enum = { workspace = true }
safe-discriminant = { workspace = true }
tpm2-rs-errors = { workspace = true }
tpm2-rs-marshalable = { workspace = true }
tpm2-rs-unionify = { workspace = true }

[dev-dependencies]
# Include debug implemenation for unit tests
tpm2-rs-errors = { workspace = true, features = ["debug"] }
