[package]
name = "tpm2-rs-base"
version = "0.0.1"
edition = "2021"

[dependencies]
bitflags = { workspace = true }
open-enum = { workspace = true }
safe-discriminant = { workspace = true }
tpm2-rs-errors = { workspace = true }
tpm2-rs-marshalable = { workspace = true }
tpm2-rs-unionify = { workspace = true }

[features]
# Implement conversions/traits which require std
std = ["tpm2-rs-errors/std"]
