[package]
name = "tpm2-rs-base"
# Inherit from Workspace Settings
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bitflags = { workspace = true }
open-enum = { workspace = true }
safe-discriminant = { workspace = true }
tpm2-rs-errors = { workspace = true }
tpm2-rs-marshalable = { workspace = true }
tpm2-rs-unionify = { workspace = true }

[features]
# Implement conversions/traits which require std
std = ["tpm2-rs-errors/std"]
