[package]
name = "tpm2-rs-client"
version = "0.1.0"
edition = "2021"

[features]
default = ["connection-tcp"]

# Enable the TCP TPM connection (e.g. for the TPM simulator)
connection-tcp = ["dep:zerocopy", "tpm2-rs-base/std"]

[dependencies]
tpm2-rs-base = { workspace = true }
tpm2-rs-marshalable = { workspace = true }
zerocopy = { workspace = true, optional = true }

[dev-dependencies]
tpm2-rs-unionify = { workspace = true }

[[test]]
name = "simulator"
path = "tests/simulator.rs"
test = false # Do not test by default
required-features = ["connection-tcp"]
