[package]
name = "tpm2-rs-server"
# Inherit from Workspace Settings
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
hex-literal = { workspace = true }
tpm2-rs-base = { workspace = true }
