[package]
name = "tpm2-rs-unionify"
# Inherit from Workspace Settings
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tpm2-rs-unionify-derive = { workspace = true }

[dev-dependencies]
trybuild = { workspace = true }
